k8s/backend-v2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-v2
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v2
  template:
    metadata:
      labels:
        app: backend
        version: v2
    spec:
      containers:
        - name: chatapp-backend
          image: saurabhdave59/chatapp-backend:latest
          ports:
            - containerPort: 5001
